# NDKLearnDemo2

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/demo/sunqi13/myapplication/: ExampleInstrumentedMediaUtils.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: TimeUtils.h  native-demo.cpp
app/src/main/java/demo/sunqi13/myapplication/: JniOnLoadTest.java  MainActivity.kt  MediaUtils.kt  Person.java  Test.kt  TimeUtils.java
app/src/test/java/demo/sunqi13/myapplication/: ExampleUnitMediaUtils.kt  ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
